--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,14 @@ spring.datasource.url=jdbc:mysql://localhost:3306/loja
 spring.datasource.username=root
 spring.datasource.password=RafaeleAna2704@
 spring.jpa.hibernate.ddl-auto=update
-
-## Hibernate Properties
-# The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=gustavolira123321@gmail.com
+spring.mail.password=rpucrobsgblpftiw
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.ssl.enable=false
+spring.mail.test-connection=true
